--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,6 +31,7 @@ section {
   font-size: 1, 5 rem;
   color: black;
   display: table;
+  justify-content: space-evenly;
   padding: 8px;
   border-radius: 10px;
 }
@@ -47,7 +48,7 @@ section {
   padding: 10px;
   height: 30px;
   display: flex;
-  flex-flow: wrap row;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   gap: 5px 10px;
 }
@@ -56,6 +57,11 @@ section {
   width: 70%;
   border-radius: 10px 25%;
   display: flex;
+  justify-content: space-evenly;
+}
+
+.image-fit {
+  flex: display;
   justify-content: space-evenly;
 }
 
@@ -70,4 +76,11 @@ section {
   display: flex;
   align-items: stretch;
   gap: 2px;
+}
+
+.interests-list {
+  padding-top: -5px;
+  padding-bottom: -5px;
+  display: flex;
+  justify-content: start;
 }
